# IoT-Temperature-Sensor-Firmware

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  extract_sbom_syft.sh  generate_sbom.sh  generate_sbom_conan_lockfile.sh  scan.sh  scan_with_report.sh
.github/workflows/: scancode-io.yml
include/: config.h
scancode-io/: .env.example  README.md  scan_project.py
src/: main.c  sensor.c  sensor.h
